--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                     <button onclick="copyCode('cmd1')" class="text-xs hover:text-white text-muted transition"><i class="fa-regular fa-copy"></i> Copy</button>
                 </div>
                 <div class="p-6 overflow-x-auto">
-                    <code id="cmd1" class="font-mono text-sm text-primary">curl -sL https://raw.githubusercontent.com/z1dan820/hazivault/main/install.sh | sudo bash</code>
+                    <code id="cmd1" class="font-mono text-sm text-primary">curl -sL https://raw.githubusercontent.com/z1dan820/hazivault/main/install.sh | bash</code>
                 </div>
             </div>
             <div class="mt-4 ml-14 flex items-center gap-2 text-xs text-yellow-500 bg-yellow-500/10 p-3 rounded-lg border border-yellow-500/20 max-w-max">
                 <i class="fa-solid fa-triangle-exclamation"></i>
-                <span>Untuk Termux: Hapus kata "sudo" pada perintah di atas.</span>
+                <span>Untuk Termux: samakan pada perintah di atas.</span>
             </div>
         </div>
 
