--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div class="mt-4 ml-14 flex items-center gap-2 text-xs text-yellow-500 bg-yellow-500/10 p-3 rounded-lg border border-yellow-500/20 max-w-max">
                 <i class="fa-solid fa-triangle-exclamation"></i>
-                <span>Untuk Termux: samakan pada perintah di atas.</span>
+                <span>Untuk Termux: sering bug dan harus root, disarankan pakai stb aja.</span>
             </div>
         </div>
 
